Added all metas in the header of the page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Meta Tags-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, maximum-scale=1.0" >
-    <meta>
+    <title>Px to Vw converter - Easily Convert Px units into Vw and Vh</title>
+    <meta name="description" content="Visit our website to make a responsive webpage. We here convert your PX screen size into Vw and Vh. Using our website, you can easily figure out what your element sizes should be on your page.">
+    <meta name="robots" content="index/follow">
+    <meta name="author" content="Shaik Mohammed Huzaifa">
+    <meta name="Keywords"content="PxtoVw,Pxconverter,Responsive,Responsive webpage,mobile Responsive,pixels to viewport conversion,viewport width,viewport height,viewport width converter,Vw converter,viewport height converter,Vh converter,Iphone screen viewport,screen size,Responsive webpage converter">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +24,6 @@
 
   gtag('config', 'G-P2YNF9B1M0');
 </script>
-    <title>Px to Vw converter</title>
 </head>
 <body>
   <div class="navbar">
